--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,5 +11,5 @@
   <%= f.label :password_confirmation, "Confirmation" %>
   <%= f.password_field :password_confirmation %>
 
-  <%= f.submit "Submit", class: "btn btn-large btn-primary" %>
+  <%= f.submit "Submit", class: "btn btn-large btn-primary show" %>
 <% end %>
